--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -1,6 +1,6 @@
 body {
     padding: 2rem;
-    background-color: beige;
+    background-color: #FFFFFF;
     h2 {
         padding-bottom: 8px;
         text-decoration: underline;
