--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -1,4 +1,8 @@
-.active-btn {
-    border-bottom: 4px solid #000000 !important;
-    border-radius: 0 !important;
+nav {
+    background-color: #0d6efd;
+    margin-bottom: 1em;
+    .active-btn {
+        border-bottom: 4px solid #000000 !important;
+        border-radius: 0 !important;
+    }
 }
