add rwd padding

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -11,3 +11,11 @@ body {
         padding: 0 2em;
     }
 }
+
+@media (max-width: 400px) {
+    body {   
+        main {
+        padding: 8px;
+        }
+    }
+}
