--- a/src/views/homepageView/homepage.scss
+++ b/src/views/homepageView/homepage.scss
@@ -11,4 +11,11 @@ section.homePage {
         align-items: center;
         justify-content: center;
     }
+    img {
+        border: 6px dashed #ffc720;
+    }
+    p {
+        font-family: "Lobster", cursive;
+        font-size: 24px; 
+    }
 }
