--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 body {   
     background-color: #FFFFFF;
     main {
@@ -34,7 +35,7 @@ body {
 }
 
 footer.footer {
-    background-color: #0d6efd;
+    background-color: #edc2a7;
     padding: 1em 0;
     div,
     span {
@@ -45,8 +46,8 @@ footer.footer {
         color: #FFFFFF !important;
     }
     span.mainText {
+        color: #000000;
         font-weight: 600;
-        color: #ffbf1e;
         margin-bottom: 8px;
     }
     p {
