--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -4,7 +4,7 @@ nav {
     margin-bottom: 16px;
     padding: 16px;
     .active-btn {
-        border-bottom: 4px solid #000000 !important;
+        font-weight: 900;
         border-radius: 0 !important;
     }
 }
