styling new spa version

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -3,11 +3,6 @@ body {
     background-color: #FFFFFF;
     main {
     padding: 0 2em 2em 2em;
-    .btn-primary {
-        background-color: #edc2a7;
-        border-color: #edc2a7;
-        color: #000000;
-    }
         h2 {
             padding-bottom: 8px;
             text-decoration: underline;
@@ -68,4 +63,10 @@ footer.footer {
         flex-direction: row;
         justify-content: space-evenly;
     }
+}
+
+.btn-primary {
+    background-color: #edc2a7 !important;
+    border-color: #edc2a7 !important;
+    color: #000000 !important;
 }
