--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -4,7 +4,7 @@ nav {
     margin-bottom: 16px;
     padding: 16px;
     .active-btn {
-        font-weight: 900;
+        font-weight: 600;
         border-radius: 0 !important;
     }
 }
@@ -15,7 +15,7 @@ nav {
     font-size: 32px;
     margin-left: 16px;
     span {
-        color: rgb(255, 191, 30);
+        color: #000000;
     }
 }
 
