--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -3,6 +3,7 @@ nav {
     background-color: #edc2a7;
     margin-bottom: 16px;
     padding: 16px;
+    text-align: center;
     .active-btn {
         font-weight: 600;
         border-radius: 0 !important;
@@ -12,7 +13,7 @@ nav {
 .logoSPAText {
     font-family: 'Merriweather', serif;
     color: #FFFFFF;
-    font-size: 32px;
+    font-size: 40px;
     margin-left: 16px;
     span {
         color: #000000;
