--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 body {   
     background-color: #FFFFFF;
+    overflow-x: hidden;
     main {
-    padding: 0 2em 2em 2em;
+        padding: 0 16px 16px 16px;
         h2 {
             padding-bottom: 8px;
             text-decoration: underline;
@@ -134,5 +135,24 @@ nav .btn-primary:hover:after {
 @media (max-width: 600px) {
 .btn.hero-buttons {
     margin-right: 0;
+    }
+}
+
+.homePage .bigImage {
+	position: relative;
+    margin-left: -16px;
+    width: calc(100vw - 16px);
+    border-radius: 0;
+    height: 30vh;
+    margin-top: -16px;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 86px;
+        width: 100%;
+        height: 20px;
+        display: block;
+        background: linear-gradient(#edc2a7, rgba(255,255,255, 0));
+        z-index: 100;
     }
 }
