--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -145,15 +145,5 @@ nav .btn-primary:hover:after {
     border-radius: 0;
     height: 30vh;
     margin-top: -16px;
-    box-shadow: none;
-    &::before {
-        content: '';
-        position: absolute;
-        top: 86px;
-        width: 100%;
-        height: 20px;
-        display: block;
-        background: linear-gradient(#edc2a7, rgba(255,255,255, 0));
-        z-index: 100;
-    }
+    box-shadow: 18px 18px 36px -12px #edc2a7;
 }
