--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -5,6 +5,7 @@ body {
     main {
         padding: 0 16px 16px 16px;
         h2 {
+            font-family: 'Merriweather', serif;
             padding-bottom: 8px;
             text-decoration: underline;
         }
