--- a/src/views/cartView/reservations.scss
+++ b/src/views/cartView/reservations.scss
@@ -1,7 +1,7 @@
 .flex290 {
     display: flex;
     flex-direction: column;
-    width: 290px;
+    width: 22%;
     margin-bottom: 8px;
 }
 
@@ -11,4 +11,13 @@
 
 button {
     border-radius: 6px;
+}
+
+@media (max-width: 950px) {
+	div.form_container form#booking>div {
+		flex-direction: column;
+	}
+	div.form_container form#booking>div .div.flex290 {
+		width: 90vw;
+	}
 }
