--- a/src/views/housesView/house.scss
+++ b/src/views/housesView/house.scss
@@ -1,6 +1,8 @@
 .housesContainer {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .housesContainer .houseArticle {
