--- a/src/views/roomsView/room.scss
+++ b/src/views/roomsView/room.scss
@@ -6,6 +6,8 @@ article.roomArticle {
 .roomsContainer {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .roomsContainer .roomArticle {
