--- a/src/views/treatmentsView/treatment.scss
+++ b/src/views/treatmentsView/treatment.scss
@@ -16,6 +16,8 @@ article {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .treatmentContainer {
