--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -2,6 +2,7 @@
 body {   
     background-color: #FFFFFF;
     overflow-x: hidden;
+    font-family: 'Merriweather', serif;
     main {
         padding: 0 16px 16px 16px;
         h2 {
