add position relative to h2

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -6,6 +6,7 @@ body {
     main {
         padding: 0 16px 16px 16px;
         h2 {
+            position: relative;
             font-family: "Merriweather", serif;
             padding-bottom: 8px;
             text-align: center;
