--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -14,13 +14,15 @@ body {
             font-weight: 600;
             &::after {
                 display: block;
-                content: '';
+                content: "";
                 width: 60px;
-                height: 8px;
+                height: 3px;
                 background: #edc2a7;
                 position: absolute;
                 bottom: 4px;
                 left: 0;
+                right: 0;
+                margin: 0 auto;
                 z-index: -1;
             }
         }
