--- a/src/views/calculateView/calculate.scss
+++ b/src/views/calculateView/calculate.scss
@@ -18,7 +18,7 @@
     font-size: 36px;
     line-height: 60px;
     text-align: right;
-    background-color: #9bf9f7;
+    background-color: #edc2a700;
     border: 0;
     pointer-events: none;
 }
