--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -3,6 +3,31 @@ nav {
     background-color: #edc2a7;
     padding: 16px;
     text-align: center;
+    .btn-primary {
+        display: inline-block;
+        position: relative;
+        color: #000000;
+        border-right: 1px solid #000 !important;
+        border-radius: 0 !important;
+        &:after {
+            content: '';
+            position: absolute;
+            width: 80%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            background-color: #f8f8f8;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+        }
+        &::hover:after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+        }
+    }
     .active-btn {
         font-weight: 600;
         border-radius: 0 !important;
