--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -26,7 +26,7 @@ nav {
             transform-origin: bottom right;
             transition: transform 0.25s ease-out;
         }
-        &::hover:after {
+        &:hover:after {
             transform: scaleX(1);
             transform-origin: bottom left;
         }
