add pointer cursor to hamburger

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -170,6 +170,7 @@ footer.footer {
         height: 20vh;
     }
     #hamburger {
+        cursor: pointer;
         display: block;
         position: absolute;
         top: 24px;
