aling logo on left on mobiles

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -186,4 +186,7 @@ footer.footer {
     nav .btn-primary:last-child {
         display: none !important;
     }
+    .logoSPAText {
+        text-align: left !important;
+    }
 }
