upgrade mobile styles

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -170,7 +170,7 @@ footer.footer {
 
 @media (max-width: 600px) {
     .btn.hero-buttons {
-        margin-right: 0;
+        margin-right: 0 !important;
     }
     .homePage .bigImage {
         height: 20vh;
@@ -178,10 +178,10 @@ footer.footer {
     #hamburger {
         cursor: pointer;
         display: block;
-        position: absolute;
-        top: 24px;
-        right: 16px;
         font-size: 40px;
+        position: absolute;
+        right: 16px;
+        top: 8px;
     }
     nav .btn-primary {
         display: none !important;
@@ -194,5 +194,21 @@ footer.footer {
     }
     .logoSPAText {
         text-align: left !important;
+        margin-left: 8px!important;
+        font-size: 30px;
+    }
+    .logoSPAText span.text {
+        top: 44px;
+        left: 4px;
+    }
+    section.homePage .homepageTitle {
+        font-size: 24px;
+    }
+    section.homePage p,
+    section.homePage button {
+    font-size: 16px;
+    }
+    nav {
+        padding: 8px;
     }
 }
