clean homepage styles

--- a/src/views/homepageView/homepage.scss
+++ b/src/views/homepageView/homepage.scss
@@ -30,5 +30,12 @@ section.homePage {
         img {
             width: 60vw;
         }
+        .homepageTitle {
+            font-size: 24px;
+        }
+        p,
+        button {
+        font-size: 16px;
+        }
     }
 }
