add !important to down spa text

--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -74,12 +74,12 @@ nav {
     }
     .logoSPAText {
         text-align: left !important;
-        margin-left: 8px!important;
+        margin-left: 8px !important;
         font-size: 30px;
     }
     .logoSPAText span.text {
-        top: 44px;
-        left: 4px;
+        top: 44px !important;
+        left: 4px !important;
     }
     nav {
         padding: 8px;
