--- a/src/views/homepageView/homepage.scss
+++ b/src/views/homepageView/homepage.scss
@@ -35,7 +35,7 @@ section.homePage {
         }
         p,
         button {
-        font-size: 16px;
+        font-size: 16px !important;
         }
     }
 }
